--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "devDependencies": {
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
-    "webpack-dev-server": "^3"
+    "webpack-dev-server": "^3",
+    "sass": "^1.26.11",
+    "sass-loader": "^10.0.2"
   }
 }
