--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "vue-app",
   "private": true,
   "dependencies": {
+    "@quasar/extras": "^1.9.7",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
     "axios": "^0.27.2",
+    "quasar": "^1.14.0",
     "vue": "^2.6.10",
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.10",
@@ -17,8 +19,8 @@
   "devDependencies": {
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
-    "webpack-dev-server": "^3",
     "sass": "^1.26.11",
-    "sass-loader": "^10.0.2"
+    "sass-loader": "^10.0.2",
+    "webpack-dev-server": "^3"
   }
 }
