--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "quasar": "^1.14.0",
     "vue": "^2.6.10",
     "vue-loader": "^15.7.0",
+    "vue-router": "^3.0.0",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
