--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
+    "actioncable": "^5.2.4-4",
+    "actioncable-vue": "^2.3.2",
+    "vuex": "^3.5.1",
+    "vuex-persistedstate": "^4.0.0-beta.1",
     "axios": "^0.27.2",
     "quasar": "^1.14.0",
     "vue": "^2.6.10",
