--- a/package.json
+++ b/package.json
@@ -18,10 +18,20 @@
     "vue-router": "^3.0.0",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "dotenv": "^8.2.0",
+    "vue-i18n": "^8.22.1",
+    "eslint-webpack-plugin": "^2.1.0"
   },
   "version": "0.1.0",
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.11.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-babel": "^5.3.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-vue": "^7.1.0",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
     "sass": "^1.26.11",
